@@ -1,3 +1,14 @@
+2003-07-29  Martin Hunt  <hunt@redhat.com>
+
+	* library/prefs.tcl (pref_set_option_db): On Windows, fix 
+	highlighting of buttons.  On Unix, fix highlighting of
+	menus.
+
+2003-07-10  Martin Hunt  <hunt@redhat.com>
+
+	* library/prefs.tcl (pref_set_option_db): Only set 
+	activeBackground for Unix.
+
 2003-07-03  Martin Hunt  <hunt@redhat.com>
  
         * library/prefs.tcl (pref_set_option_db): Only
